--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
 header{
     background-color: black;
     color: white;
+    display: flex;
+    padding: 30px;
+    font-size: 24px;
+    justify-content: space-around;
 }
 
-.cabecalho-imagem(
-    width: 200px ;
-    height: 200px;
-)
+.cabecalho-imagem{
+    width: 150px;
+    height: 150px;
+}
+.cabecalho-item{
+    display: inline-block;
+    padding: 0 100px;
+}
+.turma{
+    background-image:linear-gradient(rgba(255, 255, 255, 0.945),  rgb(205, 213, 255));
+}
+.turma-titulo{
+    padding-bottom: 30px;
+    text-align:center;
+    .turma-imagem{
+        width: 300px;
+    }
+}
