--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
-header{
-    background-color: black;
+
+/*SELETOR UNIVERSAL*/
+body{
+    font-family: sans-serif;
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+.cabecalho{
+
+    background-color: rgba(216, 0, 0, 0.705);
     color: white;
     display: flex;
     padding: 30px;
     font-size: 24px;
-    justify-content: space-around;
+    justify-content:space-around;
 }
 
 .cabecalho-imagem{
@@ -16,7 +28,7 @@ header{
     padding: 0 100px;
 }
 .turma{
-    background-image:linear-gradient(rgba(255, 255, 255, 0.945),  rgb(205, 213, 255));
+    background-image:linear-gradient(rgb(190, 19, 19),  rgb(206, 118, 118));
 }
 .turma-titulo{
     padding-bottom: 30px;
