--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 
 .cabecalho{
 
-    background-color: rgb(4, 0, 247);
+    background-color: rgb(11, 172, 208);
     color: rgb(35, 33, 156);
     display: flex;
     padding: 30px;
@@ -54,7 +54,7 @@ body{
     /*SECÇAO ESTUDANTE*/
 
     .estudante{
-        background-image:linear-gradient(rgba(137,148,211,0.705),rgba(137, 148, 211, 0.705));}
+        background-image:linear-gradient(rgba(71, 223, 60, 0.705),rgba(110, 227, 200, 0.705));}
 
         .estudante-titulo{
             text-align: center;
