--- a/style.css
+++ b/style.css
@@ -5,75 +5,70 @@
     margin: 0px;
     padding: 0px;
 }
+     /*CORPO DA PAGINA*/
+  body{ font-family: sans-serif;}
 
-/*CORPO DA PAGINA*/
-
-body{
-    font-family: sans-serif;
-}
 
 /*SECÇAO CABECALHO*/
 
-.cabecalho{
-
-    background-color: rgb(11, 172, 208);
-    color: rgb(35, 33, 156);
+.cabecalho{ background-color: rgb(34, 219, 80);
+    color: rgb(0, 0, 0);
     display: flex;
     padding: 30px;
     font-size: 24px;
-    justify-content:space-around;
-}
+    justify-content:space-around;}
 
-.cabecalho-imagem{
-    width: 150px;
-    height: 150px;
-}
-.cabecalho-item{
-    display: inline-block;
+.cabecalho-imagem{width: 100px;
+    height: 100px;}
+
+
+.cabecalho-item{display: inline-block;
     padding: 0 100px;
+    text-decoration: underline;
 
     /*SECÇAO TURMA*/
 }
 .turma{
-    background-image:linear-gradient(rgb(137,148,211,0.705),  rgb(137,148,211,0.705));
-}
-.turma-titulo{
-    padding-bottom: 30px;
-    text-align:center;}
-    
-    .turma-div{
-    display: flex;
+    background-image:linear-gradient(rgba(34, 219, 80),  rgba(34, 219, 80));
+    padding: 30px;}
+
+    .turma-titulo{padding-bottom: 30px;
+    text-align:center;
+    font-size:30px;}
+   
+    .turma-div{display: flex;
     justify-content:center;
-}
+    font: size 20px;
+    padding: 0 200px;}
     
-    .turma-imagem{
-        width: 300px;
-    }
+
+    .turma-imagem{ width: 300px;}
 
 
     /*SECÇAO ESTUDANTE*/
 
     .estudante{
-        background-image:linear-gradient(rgba(71, 223, 60, 0.705),rgba(110, 227, 200, 0.705));}
+        background-image:linear-gradient(rgba(34, 219, 80),rgb(71, 223, 60, 0.705));}
 
-        .estudante-titulo{
-            text-align: center;
-            font: size 24px;
+        .estudante-titulo{text-align: center;
+            font: size 26px;
             padding:30px 0;}
         
+   .estudante-todos{display:grid;
+      grid-template-columns: 20% 20% 20% 20% 20%;}
+   
+            .estudante-div{ text-align: center;}
 
-            .estudante-div{
-                text-align: center;}
+                .estudante-imagem{ width: 100px;
+                    height:0 50px;}
 
-                .estudante-imagem{
-                    width: 90px;
-                    height: 100px;
-                }
-   .estudante-icons{
-    width: 52px;
-    height:53px;
+   .estudante-icons{ width: 30px;
+    height:30px;
    }
 
-   .estudante-legenda{
-    font-size: 14px;
-   }
+   .estudante-legenda{font-size: 14px; }
+
+   .rodape{background-color: black;
+    color:white;
+    text-align:center;
+    padding: 30px 0;}
